--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -1,16 +1,44 @@
-#root {
-  max-width: 1280px;
+#root, div {
+  /* max-width: 1280px;s */
   /* margin: 0 auto; */
   /* padding: 2rem; */
-  text-align: center;
+  /* text-align: center; */
   user-select: none;
+  
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  vertical-align: top;
+}
+
+.mainBoard {
+  display: flex;
+  align-items: flex-start;
+}
+div {
+  vertical-align: top;
 }
 
 .loop {
-  color: black
+  color: black;
+  font-weight: 500;
 }
 
-.logo {
+.upgrade{
+  margin: 0px;
+  padding: 5px;
+  border: 0px;
+}
+
+.upgrade p {
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  
+  color: cornsilk;
+}
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -21,27 +49,27 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
-.card {
+/* .card {
   padding: 2em;
-}
+} */
 
-.read-the-docs {
+/* .read-the-docs {
   color: #888;
-}
+} */
