deleted unused css code, and more css changes.

--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -1,8 +1,4 @@
 #root, div {
-  /* max-width: 1280px;s */
-  /* margin: 0 auto; */
-  /* padding: 2rem; */
-  /* text-align: center; */
   user-select: none;
   
   padding: 0px;
@@ -15,9 +11,25 @@
   display: flex;
   align-items: flex-start;
 }
+
+.lopsAndUpgrades {
+  display: flex;
+  position: relative;
+}
+
+.loopsAndUpgrades.desktop {
+  flex-direction: row;
+}
+
+.loopsAndUpgrades.mobile {
+  flex-direction: column;
+}
+
 div {
   vertical-align: top;
 }
+
+
 
 .loop {
   color: black;
@@ -37,39 +49,3 @@ div {
   
   color: cornsilk;
 }
-
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-} */
-
-/* @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
-
-/* .card {
-  padding: 2em;
-} */
-
-/* .read-the-docs {
-  color: #888;
-} */
