--- a/loop_clicker/src/index.css
+++ b/loop_clicker/src/index.css
@@ -28,7 +28,7 @@
   /* place-items: center; */
   /* min-width: 320px;
   min-height: 100vh; */
-} */
+/* } */ 
 
 h1 {
   font-size: 3.2em;
@@ -36,9 +36,9 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border-radius: 6px;
+  border: 0px solid transparent;
+  padding: 0em 0.5em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
