added most upgrades
upgrades cost is 4* the cost of the previous upgrade. upgrade iteration per level is the cost / 150.
the cost increase per level is a 1.2 multiplier.

--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -34,6 +34,19 @@
   height: 300px;
 }
 
+.scoreAndLoopBunch {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  left: 10px;
+  top: 10px;
+}
+
+.score {
+    position: absolute
+    width: 500px
+}
+
 .upgradesColumn {
   position: relative;
 }
