moving UpgrdesComponent.tsx CSS into App.css

--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -53,6 +53,11 @@
   position: relative;
 }
 
+.upgradesComponent {
+  display: flex;
+  flex-direction: column;
+}
+
 .divInUpgrade {
   display: flex;
   fles-direction: column;
