--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -50,7 +50,7 @@
 }
 
 .loopBunch {
-  position: absolute
+  position: absolute;
 }
 
 .upgradesColumn {
@@ -84,7 +84,13 @@ div {
   color: black;
   font-weight: 500;
   text-align: center;
-  position: relative;
+  position: absolute;
+  pointer-events: none;
+  text-align: center;
+}
+
+.textDivInLoop {
+  position: absolute;
 }
 
 .upgrade{
