css formatting for upgrade cost and title.

--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -7,6 +7,13 @@
   vertical-align: top;
 }
 
+
+div {
+  vertical-align: top;
+}
+
+
+
 .mainBoard {
   display: flex;
   align-items: flex-start;
@@ -69,6 +76,21 @@
   /* background-color: black; */
 }
 
+.loop {
+  color: black;
+  font-weight: 500;
+  text-align: center;
+  position: absolute;
+  pointer-events: none;
+  text-align: center;
+}
+
+.textDivInLoop {
+  position: absolute;
+  color: white;
+  text-shadow: 0px 0px 5px black;
+}
+
 .upgradesColumn {
   position: relative;
 }
@@ -98,31 +120,32 @@
 }
 
 
-div {
-  vertical-align: top;
-}
-
-
-
-.loop {
-  color: black;
-  font-weight: 500;
-  text-align: center;
-  position: absolute;
-  pointer-events: none;
-  text-align: center;
-}
-
-.textDivInLoop {
-  position: absolute;
-  color: white;
-  text-shadow: 0px 0px 5px black;
-}
 
 .upgrade{
   margin: 0px;
   padding: 5px;
   border: 0px;
+}
+
+.upgrade p {
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  
+}
+
+.upgrade p :not(.upgradeCost.upgradeTitle) {
+
+  color: cornsilk;
+}
+
+.upgradeTitle {
+  font-size : 1.2em;
+  color: yellow;
+}
+
+.upgradeCost {
+  color: darkgreen;
 }
 
 .upgrade button {
@@ -141,12 +164,4 @@ div {
   height: 100px;
   background-color: whitesmoke;
   margin: 5px;
-}
-
-.upgrade p {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-  
-  color: cornsilk;
 }
