made upgrade button enabled and disabled colour in css.

--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -136,6 +136,18 @@ div {
   
 }
 
+.upgrade button {
+  width: 400px;
+}
+
+.upgrade.upgradeIsDisabled button {
+  background-color: #1a1a1a;
+}
+
+.upgrade.upgradeIsEnabled button {
+  background-color: #062031;
+}
+
 .upgrade p :not(.upgradeCost.upgradeTitle) {
 
   color: cornsilk;
