centered and changed text for score and loops destroyed per second.

--- a/loop_clicker/src/App.css
+++ b/loop_clicker/src/App.css
@@ -69,8 +69,9 @@ div {
 
 .score {
     position: absolute;
-    width: 300px;
+    width: 400px;
     /* background-color: black; */
+    text-align: center;
 }
 
 .loopBunch {
